revert method change