@@ -149,25 +149,25 @@ public class FileFieldParser {
         LinkedFile field = null;
         if (LinkedFile.isOnlineLink(entry.get(1))) {
             try {
-                field = new LinkedFile(entry.get(0), new URL(entry.get(1)), entry.get(2));
+                field = new LinkedFile(entry.getFirst(), new URL(entry.get(1)), entry.get(2));
             } catch (MalformedURLException e) {
                 // in case the URL is malformed, store it nevertheless
-                field = new LinkedFile(entry.get(0), entry.get(1), entry.get(2));
+                field = new LinkedFile(entry.getFirst(), entry.get(1), entry.get(2));
             }
         } else {
             String pathStr = entry.get(1);
             if (pathStr.contains("//")) {
                 // In case the path contains //, we assume it is a malformed URL, not a malformed path.
                 // On linux, the double slash would be converted to a single slash.
-                field = new LinkedFile(entry.get(0), pathStr, entry.get(2));
+                field = new LinkedFile(entry.getFirst(), pathStr, entry.get(2));
             } else {
                 try {
                     // there is no Path.isValidPath(String) method
-                    field = new LinkedFile(entry.get(0), Path.of(pathStr), entry.get(2));
+                    field = new LinkedFile(entry.getFirst(), Path.of(pathStr), entry.get(2));
                 } catch (InvalidPathException e) {
                     // Ignored
                     LOGGER.debug("Invalid path object, continuing with string", e);
-                    field = new LinkedFile(entry.get(0), pathStr, entry.get(2));
+                    field = new LinkedFile(entry.getFirst(), pathStr, entry.get(2));
                 }
             }
         }
